# pennylane-quantuminspire2

./: .buildinfo  .editorconfig  .gitignore  README.md  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/: dependabot.yml
.github/workflows/: docs-preview.yaml  release.yaml  tests.yaml
_modules/: index.html
_modules/pennylane_quantuminspire2/: qi_device.html
_modules/qiskit_quantuminspire/api/: pagination.html  settings.html
_sources/: index.rst.txt
_sources/api/: pennylane_quantuminspire2.rst.txt
_sources/hybrid/: leveraging_pennylane.md.txt
_sources/notebooks/: basic_circuit_execution.ipynb.txt
_static/: documentation_options.js
api/: modules.html  pennylane_quantuminspire2.api.html  pennylane_quantuminspire2.html
docs/: .gitignore  conf.py  contributing.md  index.rst  license.md
docs/api/: modules.rst
docs/getting_started/: submitting.md  submitting.rst
docs/hybrid/: basics.md  index.rst  simple.py
docs/notebooks/: basic_circuit_execution.ipynb  index.rst  pennylane_tutorial.ipynb
getting_started/: index.html  installation.html  submitting.html
hybrid/: index.html
notebooks/: basic_circuit_execution.html  index.html
pennylane_quantuminspire2/: __init__.py  cqasm.py  qi_backend_provider.py  qi_device.py
pennylane_quantuminspire2/api/: pagination.py  settings.py
pr-preview/pr-27/: contributing.html  genindex.html  objects.inv  searchindex.js
pr-preview/pr-27/_sources/: contributing.md.txt
pr-preview/pr-27/api/: pennylane_quantuminspire2.api.html  pennylane_quantuminspire2.html
pr-preview/pr-27/getting_started/: submitting.html
pr-preview/pr-27/notebooks/: basic_circuit_execution.html
pr-preview/pr-46/: index.html  license.html  objects.inv  searchindex.js
pr-preview/pr-46/_modules/: index.html
pr-preview/pr-46/api/: modules.html  pennylane_quantuminspire2.html
pr-preview/pr-46/getting_started/: submitting.html
pr-preview/pr-46/notebooks/: basic_circuit_execution.html  index.html
pr-preview/pr-51/: py-modindex.html
pr-preview/pr-51/api/: pennylane_quantuminspire2.api.html
pr-preview/pr-51/getting_started/: installation.html  submitting.html
pr-preview/pr-51/notebooks/: basic_circuit_execution.html
pr-preview/pr-72/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
pr-preview/pr-72/_modules/: index.html
pr-preview/pr-72/api/: modules.html  (+1 more)
pr-preview/pr-75/: contributing.html  index.html  search.html  searchindex.js
tests/: conftest.py  e2e_test.py  helpers.py  test_cqasm.py  test_device.py  test_e2e.py  test_main.py
(+30 files in other folders)
